--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "fairsquare-washington",
-    "version": "1.3.1",
-    "description": "The Discord bot for the FairSquare Studios server.",
+    "name": "world-downloader-server",
+    "version": "1.0.0",
+    "description": "Simple file server to send worlds to and download worlds from.",
     "main": "index.js",
     "scripts": {
         "build:start": "npm run build && npm run start",
@@ -11,7 +11,7 @@
     },
     "keywords": [],
     "author": "McJeffr",
-    "repository": "https://bitbucket.org/fairsquare-studios/fairsquare-washington",
+    "repository": "https://github.com/fairsquare-games/world-downloader-server",
     "license": "ISC",
     "devDependencies": {
         "@types/config": "0.0.36",
@@ -19,6 +19,7 @@
         "@types/multer": "^1.4.4",
         "@types/node": "^14.0.3",
         "@types/pg": "^7.14.3",
+        "@types/uuid": "^8.3.0",
         "nodemon": "^2.0.4",
         "prettier": "^2.0.5",
         "pretty-quick": "^2.0.1",
@@ -29,6 +30,7 @@
     "dependencies": {
         "config": "^3.3.1",
         "express": "^4.17.1",
-        "multer": "^1.4.2"
+        "multer": "^1.4.2",
+        "uuid": "^8.3.0"
     }
 }
