--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "devDependencies": {
         "@types/config": "0.0.36",
         "@types/express": "^4.17.7",
+        "@types/http-terminator": "^2.0.1",
         "@types/multer": "^1.4.4",
         "@types/node": "^14.0.3",
         "@types/pg": "^7.14.3",
@@ -30,6 +31,7 @@
     "dependencies": {
         "config": "^3.3.1",
         "express": "^4.17.1",
+        "http-terminator": "^2.0.3",
         "multer": "^1.4.2",
         "uuid": "^8.3.0"
     }
